examples/reference/range_step_zero_error.err
Assembly failed:
2: ERROR [asm401]
    2 | .byte .len(0..=4:0)
      ^
ERROR: range step must be non-zero
